<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/item2"
        android:icon="@drawable/ic_menu"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/item4"
        android:icon="@drawable/ic_menu"
        android:title="@string/foods"
        app:showAsAction="never" />
    <item
        android:id="@+id/item3"
        android:title="@string/lang"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/subItem1"
                android:title="EN" />


            <item
                android:id="@+id/subItem2"
                android:title="TR" />

        </menu>

    </item>

</menu>